// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dedent can be used as a function 1`] = `"A test argument."`;

exports[`dedent doesn't strip explicit newlines 1`] = `
"<p>Hello world!</p>
"
`;

exports[`dedent doesn't strip explicit newlines with mindent 1`] = `
"<p>
	Hello world!
</p>
"
`;

exports[`dedent function character escapes default behavior does not escape backticks 1`] = `"\`"`;

exports[`dedent function character escapes default behavior does not escape dollar signs 1`] = `"$"`;

exports[`dedent function character escapes default behavior does not escape opening braces 1`] = `"{"`;

exports[`dedent function character escapes default behavior escapes double-escaped backticks 1`] = `"\\\`"`;

exports[`dedent function character escapes default behavior escapes double-escaped dollar signs 1`] = `"\\$"`;

exports[`dedent function character escapes default behavior escapes double-escaped opening braces 1`] = `"\\{"`;

exports[`dedent function character escapes default behavior ignores closing braces 1`] = `"}"`;

exports[`dedent function character escapes with escapeSpecialCharacters false backticks 1`] = `"\`"`;

exports[`dedent function character escapes with escapeSpecialCharacters false dollar signs 1`] = `"$"`;

exports[`dedent function character escapes with escapeSpecialCharacters false double-escaped backticks 1`] = `"\\\`"`;

exports[`dedent function character escapes with escapeSpecialCharacters false double-escaped dollar signs 1`] = `"\\$"`;

exports[`dedent function character escapes with escapeSpecialCharacters false double-escaped opening braces 1`] = `"\\{"`;

exports[`dedent function character escapes with escapeSpecialCharacters false opening braces 1`] = `"{"`;

exports[`dedent function character escapes with escapeSpecialCharacters true backticks 1`] = `"\`"`;

exports[`dedent function character escapes with escapeSpecialCharacters true dollar signs 1`] = `"$"`;

exports[`dedent function character escapes with escapeSpecialCharacters true double-escaped backticks 1`] = `"\`"`;

exports[`dedent function character escapes with escapeSpecialCharacters true double-escaped dollar signs 1`] = `"$"`;

exports[`dedent function character escapes with escapeSpecialCharacters true double-escaped opening braces 1`] = `"{"`;

exports[`dedent function character escapes with escapeSpecialCharacters true opening braces 1`] = `"{"`;

exports[`dedent function character escapes with escapeSpecialCharacters undefined backticks 1`] = `"\`"`;

exports[`dedent function character escapes with escapeSpecialCharacters undefined dollar signs 1`] = `"$"`;

exports[`dedent function character escapes with escapeSpecialCharacters undefined double-escaped backticks 1`] = `"\\\`"`;

exports[`dedent function character escapes with escapeSpecialCharacters undefined double-escaped dollar signs 1`] = `"\\$"`;

exports[`dedent function character escapes with escapeSpecialCharacters undefined double-escaped opening braces 1`] = `"\\{"`;

exports[`dedent function character escapes with escapeSpecialCharacters undefined opening braces 1`] = `"{"`;

exports[`dedent should escape when called with template strings (multiline) 1`] = `
"\${hi}
name"
`;

exports[`dedent should escape when called with template strings 1`] = `"a b"`;

exports[`dedent should escape when called with template strings 2`] = `"\${hi}"`;

exports[`dedent single line input works with single line and closing backtick on newline 1`] = `"A single line of input."`;

exports[`dedent single line input works with single line and inline closing backtick 1`] = `"A single line of input."`;

exports[`dedent single line input works with single line input 1`] = `"A single line of input."`;

exports[`dedent string tag character escapes default behavior escapes backticks 1`] = `"\`"`;

exports[`dedent string tag character escapes default behavior escapes dollar signs 1`] = `"$"`;

exports[`dedent string tag character escapes default behavior escapes opening braces 1`] = `"{"`;

exports[`dedent string tag character escapes default behavior ignores closing braces 1`] = `"\\}"`;

exports[`dedent string tag character escapes with escapeSpecialCharacters false backticks 1`] = `"\\\`"`;

exports[`dedent string tag character escapes with escapeSpecialCharacters false dollar signs 1`] = `"\\$"`;

exports[`dedent string tag character escapes with escapeSpecialCharacters false opening braces 1`] = `"\\{"`;

exports[`dedent string tag character escapes with escapeSpecialCharacters true backticks 1`] = `"\`"`;

exports[`dedent string tag character escapes with escapeSpecialCharacters true dollar signs 1`] = `"$"`;

exports[`dedent string tag character escapes with escapeSpecialCharacters true opening braces 1`] = `"{"`;

exports[`dedent string tag character escapes with escapeSpecialCharacters undefined backticks 1`] = `"\`"`;

exports[`dedent string tag character escapes with escapeSpecialCharacters undefined dollar signs 1`] = `"$"`;

exports[`dedent string tag character escapes with escapeSpecialCharacters undefined opening braces 1`] = `"{"`;

exports[`dedent with alignValues false with nested text 1`] = `
"Some nested items I want to dedent:
	* first
	* second
* third
	* fourth
	* fifth
* sixth
That's all!"
`;

exports[`dedent with alignValues true with nested text 1`] = `
"Some nested items I want to dedent:
	* first
	* second
	* third
	* fourth
	* fifth
	* sixth
That's all!"
`;

exports[`dedent with alignValues undefined with nested text 1`] = `
"Some nested items I want to dedent:
	* first
	* second
* third
	* fourth
	* fifth
* sixth
That's all!"
`;

exports[`dedent with trimWhitespace false with leading whitespace 1`] = `
"


foo
"
`;

exports[`dedent with trimWhitespace false with trailing whitespace 1`] = `
"
foo   
bar   
"
`;

exports[`dedent with trimWhitespace false without trailing whitespace 1`] = `
"
foo
bar
"
`;

exports[`dedent with trimWhitespace true with leading whitespace 1`] = `"foo"`;

exports[`dedent with trimWhitespace true with trailing whitespace 1`] = `
"foo   
bar"
`;

exports[`dedent with trimWhitespace true without trailing whitespace 1`] = `
"foo
bar"
`;

exports[`dedent with trimWhitespace undefined with leading whitespace 1`] = `"foo"`;

exports[`dedent with trimWhitespace undefined with trailing whitespace 1`] = `
"foo   
bar"
`;

exports[`dedent with trimWhitespace undefined without trailing whitespace 1`] = `
"foo
bar"
`;

exports[`dedent works with blank first line 1`] = `
"Some text that I might want to indent:
	* reasons
	* fun
That's all."
`;

exports[`dedent works with escaped tabs for indentation 1`] = `
"first
	second
		third"
`;

exports[`dedent works with interpolation 1`] = `
"first line
second
third"
`;

exports[`dedent works with multiple blank first lines 1`] = `
"first
second
third"
`;

exports[`dedent works with removing same number of spaces 1`] = `
"first
	second
		 third"
`;

exports[`dedent works with spaces for indentation 1`] = `
"first
  second
    third"
`;

exports[`dedent works with suppressed newlines 1`] = `
"first second
third"
`;

exports[`dedent works with tabs for indentation 1`] = `
"first
	second
		third"
`;

exports[`dedent works without interpolation 1`] = `
"first
second
third"
`;
